--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Plataformas</string>
+    <string name="app_name">Foot Golf</string>
     <string name="title_activity_menu">MenuActivity</string>
     <string name="title_activity_opciones">OpcionesActivity</string>
 </resources>
